--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-# Upgrade pip, setuptools, wheel first
 pip>=23.0.0
 setuptools>=68.0.0
 wheel>=0.41.0
 
-# Core libraries
 pandas==2.1.0
 numpy==1.26.4
 scikit-learn==1.4.2
-surprise==0.1.1
+scikit-surprise==1.1.4
 
-# Streamlit
 streamlit==1.36.0
-
-# Misc
 tabulate==0.9.0
