--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ wheel>=0.41.0
 pandas==2.1.0
 numpy==1.26.4
 scikit-learn==1.4.2
-scikit-surprise==1.1.4
 
 streamlit==1.36.0
 tabulate==0.9.0
+# scikit-surprise removed for deploy
