--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ scikit-learn==1.4.2
 
 streamlit==1.36.0
 tabulate==0.9.0
-# scikit-surprise removed for deploy
+# scikit-surprise removed for Streamlit deploy
