--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-# Upgrade pip, setuptools, wheel first
-pip>=23.0.0
-setuptools>=68.0.0
-wheel>=0.41.0
-
-# Core libraries
-pandas==2.1.0
-numpy==1.26.4
-scikit-learn==1.4.2
-surprise==0.1.1
-
-# Streamlit
-streamlit==1.36.0
-
-# Misc
-tabulate==0.9.0
+streamlit==1.28.1
+pandas==2.0.3
+numpy==1.24.3
+scipy==1.11.3
+scikit-learn==1.3.0
+mysql-connector-python==8.1.0
+plotly==5.15.0
+matplotlib==3.7.2
+seaborn==0.12.2
+python-dotenv==1.0.0
