--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 streamlit==1.28.1
 pandas==2.0.3
 numpy==1.24.3
-scipy==1.11.3
 scikit-learn==1.3.0
+scipy==1.11.3
+tensorflow==2.13.0
 mysql-connector-python==8.1.0
-plotly==5.15.0
+plotly==5.16.1
 matplotlib==3.7.2
 seaborn==0.12.2
+nltk==3.8.1
 python-dotenv==1.0.0
